clusters/hive/apps/archive/apps/ntfy/k8s-manifests/ntfy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: ntfy
spec:
  selector:
    app: ntfy
  ports:
  - port: 80
    targetPort: 80
