clusters/hive/apps/archive/apps/ntfy/k8s-manifests/ntfy-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
  namespace: ntfy
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: ntfy.gavriliu.com
      http:
        paths:
          - backend:
              service:
                name: ntfy
                port:
                  number: 80
            path: /
            pathType: Prefix
